salkeiz-maps/src/App.css
.App {
  /* text-align: center; */
}

p {
  font-family: Didact Gothic;
}

button:focus {
  outline: none;
}

.mainSidebar {
  position: absolute;
  height: 100%;
  /* width: 400px; */
  background: white;
  z-index: 1;

  /* display: flex;
  justify-content: center; */
}

.cardObject {
  border: 1px solid lightgrey;
  width: 400px;
  /* height: 280px; */
  margin: 5px;
  border-bottom: 5px solid darkred;
}

.cardIMG {
  width: 400px;
  height: 200px;
  /* background-image: url("./data/pictures/able.PNG"); */
  background: red;
  background-position: center;
}

.nameObject {
  margin: 0px;
  font-size: 20px;
  margin-left: 5px;
  margin-top: 5px;
  font-weight: 600;
}

.addressObject {
  margin: 0px;
  margin-left: 5px;
  margin-top: 5px;
  font-weight: 600;
}

.numberObject {
  margin: 5px;
}

.markerButtons {
  width: 20px;
  height: 20px;
  background-color: lightgreen;
  border: 3px solid black;
  border-radius: 50%;
}

.navbar {
  display: flex;
  justify-content: center;
  align-items: center;
  background: lightgreen;
  height: 70px;
  /* border-bottom: 3px solid black; */
}

.navbar p {
  margin: 0px;
  font-size: 2rem;
  font-weight: 600;
}

